Add more tests